@@ -1,3 +1,7 @@
+Important changes from 1.6.2 => 1.6.3
+============================================================
+Limesurvey fieldtype list with comment no longer appends underscore to the fieldname, this might break existing calculation scripts
+
 Important changes from 1.6.1 => 1.6.2
 ============================================================
 Agenda and calendar screens added to version
